minoir changes